# code-optimization1

./: .gitignore  CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  benchmark_0.c  benchmark_0.cpp  benchmark_1.cpp  benchmark_2.cpp  benchmark_3.cpp  benchmark_4.cpp  histogram.h
include/: LimitedDataQueue.h  Reader.h  SinglePhotonHit.h  ThreadPool.h  ThreadSafeReader.h  Timer.h  single_photon_hit.h
tests/: test-LimitedDataQueue.cpp
